--- a/MarchingCubes/MarchingCubes.CSharp.csproj
+++ b/MarchingCubes/MarchingCubes.CSharp.csproj
@@ -62,6 +62,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Enemy\EnemyController.cs" />
+    <Compile Include="Assets\Scripts\Game Management\ObjectManager.cs" />
     <Compile Include="Assets\Scripts\Map Generation\CellAutoGenerator.cs" />
     <Compile Include="Assets\Scripts\Map Generation\ItemPlacement.cs" />
     <Compile Include="Assets\Scripts\Map Generation\LookupTables.cs" />
