Added automatic gun mechanic, gun sound fx

--- a/MarchingCubes/MarchingCubes.CSharp.csproj
+++ b/MarchingCubes/MarchingCubes.CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerInput.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMotor.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerSound.cs" />
     <Compile Include="Assets\Scripts\Weapons\Weapon.cs" />
     <Compile Include="Assets\Scripts\Weapons\WeaponManager.cs" />
   </ItemGroup>
