--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
+MarchingCubes/[Ll]ibrary/
+MarchingCubes/[Tt]emp/
+MarchingCubes/[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
