--- a/MarchingCubes/MarchingCubes.CSharp.csproj
+++ b/MarchingCubes/MarchingCubes.CSharp.csproj
@@ -57,6 +57,12 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Networking">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -64,6 +70,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Enemy\EnemyController.cs" />
     <Compile Include="Assets\Scripts\Game Management\GameCountdown.cs" />
+    <Compile Include="Assets\Scripts\Game Management\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Game Management\MenuManager.cs" />
     <Compile Include="Assets\Scripts\Game Management\ObjectManager.cs" />
     <Compile Include="Assets\Scripts\Map Generation\CellAutoGenerator.cs" />
     <Compile Include="Assets\Scripts\Map Generation\ItemPlacement.cs" />
