--- a/MarchingCubes/MarchingCubes.CSharp.csproj
+++ b/MarchingCubes/MarchingCubes.CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Scripts\Enemy\EnemyController.cs" />
     <Compile Include="Assets\Scripts\Game Management\GameCountdown.cs" />
     <Compile Include="Assets\Scripts\Game Management\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Game Management\MapInfo.cs" />
     <Compile Include="Assets\Scripts\Game Management\MenuManager.cs" />
     <Compile Include="Assets\Scripts\Game Management\ObjectManager.cs" />
     <Compile Include="Assets\Scripts\Map Generation\CellAutoGenerator.cs" />
